--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -11,11 +11,7 @@
 /* ---- Base Rules ---- */
 body {
   background: rgb(136, 203, 171);
-  background: linear-gradient(
-    0deg,
-    rgba(136, 203, 171, 1) 0%,
-    rgba(0, 13, 60, 1) 100%
-  );
+  background: linear-gradient(0deg, rgba(136, 203, 171, 1) 0%, rgba(0, 13, 60, 1) 100%);
   margin: 0;
   font-family: "Merriweather", serif;
   color: #fff;
@@ -81,12 +77,32 @@ section {
   font-weight: bold;
   text-decoration: none;
   color: #000;
+  cursor: pointer;
 }
 
 .navbar__menu .menu__link:hover {
   background: #333;
   color: #fff;
   transition: ease 0.3s all;
+}
+
+.page__scrollToTop {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(94, 131, 126);
+  font-size: 30px;
+  border: 2px solid #fff;
+  outline: none;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 10px;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 /* Header Styles */
@@ -96,6 +112,7 @@ section {
   top: 0;
   width: 100%;
   z-index: 5;
+  transition: opacity 0.3s ease-in-out;
 }
 
 /* Footer Styles */
@@ -147,11 +164,7 @@ section:nth-of-type(odd) .landing__container::before {
 section:nth-of-type(even) .landing__container::before {
   content: "";
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.2) 100%);
   position: absolute;
   top: 3em;
   right: 3em;
@@ -166,11 +179,7 @@ section:nth-of-type(even) .landing__container::before {
 section:nth-of-type(3n) .landing__container::after {
   content: "";
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.2) 100%);
   position: absolute;
   right: 0;
   bottom: 0;
@@ -185,11 +194,7 @@ section:nth-of-type(3n) .landing__container::after {
 section:nth-of-type(3n + 1) .landing__container::after {
   content: "";
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.2) 100%);
   position: absolute;
   right: 20vw;
   bottom: -5em;
@@ -206,11 +211,7 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: active class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.active {
   background: rgb(0, 0, 0);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 section.active .landing__container::before {
